sample-ecs-fargate-private-nlb.yml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  AppPort:
    Type: String
    Default: '80'

Resources:

  MacLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: MacLogGroup

  MacEcsExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: MacExecutionRole
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  MacEcsTaskRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: MacTaskRole
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: MacTaskRolePolicy
          PolicyDocument:
            Statement:
              - Action:
                  - s3:GetObject
                  - s3:PutObject
                Effect: Allow
                Resource:
                  - !Sub "arn:aws:s3:::mac-file-bucket/*"
              - Action:
                  - s3:ListBucket
                Effect: Allow
                Resource:
                  - !Sub "arn:aws:s3:::mac-file-bucket"

  MacContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: MacContainerSecurityGroup
      GroupDescription: Security group for container
      VpcId: !ImportValue MacVpc
      # Allow access to container from within VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 10.0.0.0/16
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.0.0.0/16
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 10.0.0.0/16

  # ECS Fargate
  MacCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: MacCluster

  MacTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    DependsOn: MacLogGroup
    Properties:
      Family: MacTaskDefinition
      Cpu: 256
      Memory: 512
      NetworkMode: awsvpc
      ExecutionRoleArn: !Ref MacEcsExecutionRole
      TaskRoleArn: !Ref MacEcsTaskRole
      ContainerDefinitions:
        - Name: MacDockerDefinition
          # Image: 917599803305.dkr.ecr.ap-southeast-1.amazonaws.com/mac-boot:latest
          Image: httpd:latest
          PortMappings:
            - ContainerPort: !Ref AppPort
              Protocol: tcp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: MacLogGroup
              awslogs-stream-prefix: ecs
      RequiresCompatibilities:
        - FARGATE

  MacService:
    Type: AWS::ECS::Service
    DependsOn:
      - MacPrivateNlbListener
    Properties:
      ServiceName: MacService
      Cluster: !Ref MacCluster
      TaskDefinition: !Ref MacTaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !ImportValue MacPrivateSubnet1
            - !ImportValue MacPrivateSubnet2
          SecurityGroups:
            - !Ref MacContainerSecurityGroup
      LoadBalancers:
        - ContainerName: MacDockerDefinition
          ContainerPort: !Ref AppPort
          TargetGroupArn: !Ref MacPrivateNlbTg

  # Private NLB
  MacPrivateNlbTg:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: true
      HealthCheckProtocol: 'TCP'
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 10
      UnhealthyThresholdCount: 2
      HealthyThresholdCount: 2
      Name: MacPrivateNlbTg
      Port: !Ref AppPort
      Protocol: TCP
      TargetType: ip
      VpcId: !ImportValue MacVpc

  MacPrivateNlbListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref MacPrivateNlbTg
          Type: forward
      LoadBalancerArn: !Ref MacPrivateNlb
      Port: 80
      Protocol: TCP

  MacPrivateNlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: MacPrivateNlb
      Scheme: internal
      Type: network
      Subnets:
        - !ImportValue MacPrivateSubnet1
        - !ImportValue MacPrivateSubnet2

Outputs:
  MacPrivateNlbDomain:
    Description: NLB Domain
    Value: !GetAtt MacPrivateNlb.DNSName
  MacEcsTaskRoleArn:
    Description: ECS Task Role ARN
    Value: !GetAtt MacEcsTaskRole.Arn
    Export:
      Name: 'MacEcsTaskRoleArn'
  MacPrivateNlbListenerArn:
    Description: NLB Listener ARN
    Value: !Ref MacPrivateNlbListener
    Export:
      Name: 'MacPrivateNlbListener'
