sample-ecs-fargate-private.yml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  AppPort:
    Type: String
    Default: '8080'

Resources:

  MacLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: MacLogGroup

  MacEcsExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: MacExecutionRole
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  MacEcsTaskRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: MacTaskRole
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: MacTaskRolePolicy
          PolicyDocument:
            Statement:
              - Action:
                  - s3:GetObject
                  - s3:PutObject
                Effect: Allow
                Resource:
                  - !Sub "arn:aws:s3:::mac-file-bucket/*"
              - Action:
                  - s3:ListBucket
                Effect: Allow
                Resource:
                  - !Sub "arn:aws:s3:::mac-file-bucket"

  MacContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: MacContainerSecurityGroup
      GroupDescription: Security group for container
      VpcId: !ImportValue MacVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 10.0.0.0/16
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.0.0.0/16
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 10.0.0.0/16

  MacAlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: MacAlbSecurityGroup
      GroupDescription: Security group for ALB
      VpcId: !ImportValue MacVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

  # ECS Fargate
  MacCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: MacCluster

  MacTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    DependsOn: MacLogGroup
    Properties:
      Family: MacTaskDefinition
      Cpu: 256
      Memory: 512
      NetworkMode: awsvpc
      ExecutionRoleArn: !Ref MacEcsExecutionRole
      TaskRoleArn: !Ref MacEcsTaskRole
      ContainerDefinitions:
        - Name: MacDockerDefinition
          Image: 917599803305.dkr.ecr.ap-southeast-1.amazonaws.com/mac-boot:latest
          PortMappings:
            - ContainerPort: !Ref AppPort
              Protocol: tcp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: MacLogGroup
              awslogs-stream-prefix: ecs
      RequiresCompatibilities:
        - FARGATE

  MacService:
    Type: AWS::ECS::Service
    DependsOn:
      - MacAlbListener
    Properties:
      ServiceName: MacService
      Cluster: !Ref MacCluster
      TaskDefinition: !Ref MacTaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !ImportValue MacPrivateSubnet1
            - !ImportValue MacPrivateSubnet2
          SecurityGroups:
            - !Ref MacContainerSecurityGroup
      LoadBalancers:
        - ContainerName: MacDockerDefinition
          ContainerPort: !Ref AppPort
          TargetGroupArn: !Ref MacAlbTg

  # Autoscaling
  MacEcsAutoScalingTarget:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Properties:
      MinCapacity: 1
      MaxCapacity: 2
      ResourceId: !Sub 'service/${MacCluster}/${MacService.Name}'
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
      RoleARN: !GetAtt MacEcsExecutionRole.Arn
  MacEcsAutoScalingPolicy:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: MacEcsAutoScalingPolicy
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref MacEcsAutoScalingTarget
      TargetTrackingScalingPolicyConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        ScaleInCooldown: 15
        ScaleOutCooldown: 15
        # Start scaling if CPC usage > 50%
        TargetValue: 50

  # Public ALB
  MacAlbTg:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 60
      HealthCheckPath: '/'
      HealthCheckProtocol: 'HTTP'
      HealthCheckTimeoutSeconds: 30
      UnhealthyThresholdCount: 2
      HealthyThresholdCount: 2
      Name: MacAlbTg
      Port: !Ref AppPort
      Protocol: HTTP
      TargetType: ip
      VpcId: !ImportValue MacVpc

  MacAlbListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref MacAlbTg
          Type: forward
      LoadBalancerArn: !Ref MacAlb
      Port: 80
      Protocol: HTTP

  MacAlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: MacAlb
      Scheme: internet-facing
      Type: application
      SecurityGroups:
        - !Ref MacAlbSecurityGroup
      Subnets:
        - !ImportValue MacPublicSubnet1
        - !ImportValue MacPublicSubnet2

Outputs:
  MacAlbDomain:
    Description: ALB Domain
    Value: !GetAtt MacAlb.DNSName
  MacEcsTaskRoleArn:
    Description: ECS Task Role ARN
    Value: !GetAtt MacEcsTaskRole.Arn
    Export:
      Name: 'MacEcsTaskRoleArn'
  MacAlbListenerArn:
    Description: ALB Listener ARN
    Value: !Ref MacAlbListener
    Export:
      Name: 'MacAlbListenerArn'
