sample-vpc.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: A sample of setting public and private VPC

Resources:
  MacVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: MacVpc

  # Public Subnet
  MacPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref MacVpc
      Tags:
        - Key: Name
          Value: MacPublicSubnet1

  MacPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref MacVpc
      Tags:
        - Key: Name
          Value: MacPublicSubnet2

  # Private Subnet
  MacPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      VpcId: !Ref MacVpc
      Tags:
        - Key: Name
          Value: MacPrivateSubnet1

  MacPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: 10.0.4.0/24
      MapPublicIpOnLaunch: false
      VpcId: !Ref MacVpc
      Tags:
        - Key: Name
          Value: MacPrivateSubnet2

  # Internet Gateway
  MacIgw:
    Type: AWS::EC2::InternetGateway
  MacIgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref MacIgw
      VpcId: !Ref MacVpc

  # NAT Gateway
  MacNatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt MacNatGatewayAttach1.AllocationId
      SubnetId: !Ref MacPublicSubnet1
      Tags:
        - Key: Name
          Value: MacNatGateway1
  MacNatGatewayAttach1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  # Public RouteTable
  MacPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MacVpc
      Tags:
        - Key: Name
          Value: MacPublicRouteTable
  MacPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: MacIgwAttachment
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref MacPublicRouteTable
      GatewayId: !Ref MacIgw

  # Private RouteTable
  MacPrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MacVpc
      Tags:
        - Key: Name
          Value: MacPrivateRouteTable1
  MacPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref MacPrivateRouteTable1
      NatGatewayId: !Ref MacNatGateway1

  # Associate Public RouteTable.
  MacPublicSubnet1RtAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MacPublicSubnet1
      RouteTableId: !Ref MacPublicRouteTable
  MacPublicSubnet2RtAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MacPublicSubnet2
      RouteTableId: !Ref MacPublicRouteTable

  # Associate Private RouteTable.
  MacPrivateSubnet1RtAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MacPrivateSubnet1
      RouteTableId: !Ref MacPrivateRouteTable1
  MacPrivateSubnet2RtAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MacPrivateSubnet2
      RouteTableId: !Ref MacPrivateRouteTable1

Outputs:
  MacVpc:
    Value: !Ref MacVpc
    Export:
      Name: 'MacVpc'
  MacPublicSubnet1:
    Value: !Ref MacPublicSubnet1
    Export:
      Name: 'MacPublicSubnet1'
  MacPublicSubnet2:
    Value: !Ref MacPublicSubnet2
    Export:
      Name: 'MacPublicSubnet2'
  MacPrivateSubnet1:
    Value: !Ref MacPrivateSubnet1
    Export:
      Name: 'MacPrivateSubnet1'
  MacPrivateSubnet2:
    Value: !Ref MacPrivateSubnet2
    Export:
      Name: 'MacPrivateSubnet2'
